--- a/package.json
+++ b/package.json
@@ -9,10 +9,24 @@
     "web": "expo start --web"
   },
   "dependencies": {
-    "expo": "~50.0.14",
+    "@react-native-async-storage/async-storage": "^1.24.0",
+    "@react-native-community/datetimepicker": "^7.6.4",
+    "@react-native-picker/picker": "^2.7.5",
+    "@react-navigation/native": "^6.1.17",
+    "@react-navigation/native-stack": "^6.9.26",
+    "@react-navigation/stack": "^6.3.29",
+    "date-fns": "^3.6.0",
+    "expo": "^50.0.15",
+    "expo-contacts": "^12.8.2",
     "expo-status-bar": "~1.11.1",
+    "firebase": "^10.11.0",
     "react": "18.2.0",
-    "react-native": "0.73.6"
+    "react-native": "0.73.6",
+    "react-native-dropdown-picker": "^5.4.6",
+    "react-native-elements": "^3.4.3",
+    "react-native-gesture-handler": "~2.14.0",
+    "react-native-safe-area-context": "^4.8.2",
+    "react-native-screens": "~3.29.0"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0"
